fix: fixed cargo toml files structure

--- a/crates/iota-bridge/Cargo.toml
+++ b/crates/iota-bridge/Cargo.toml
@@ -27,7 +27,7 @@ iota-sdk.workspace = true
 iota-types.workspace = true
 lru.workspace = true
 move-core-types.workspace = true
-mysten-metrics.workspace = true
+iota-metrics.workspace = true
 num_enum.workspace = true
 once_cell.workspace = true
 prometheus.workspace = true
