--- a/crates/iota-graphql-rpc/Cargo.toml
+++ b/crates/iota-graphql-rpc/Cargo.toml
@@ -25,7 +25,7 @@ futures.workspace = true
 git-version.workspace = true
 hex.workspace = true
 http.workspace = true
-http-body-util.workspace = true
+http-body-util = "0.1.2"
 hyper.workspace = true
 hyper-util = { workspace = true, features = ["http2", "server", "tokio"] }
 im.workspace = true
