--- a/crates/typed-store/Cargo.toml
+++ b/crates/typed-store/Cargo.toml
@@ -22,13 +22,13 @@ once_cell.workspace = true
 ouroboros = "0.18"
 prometheus.workspace = true
 rand.workspace = true
-rocksdb = { version = "0.21.0", default-features = false, features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"] }
+rocksdb.workspace = true
 serde.workspace = true
 tap.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["full", "test-util"] }
 tracing.workspace = true
-typed-store-derive = { path = "../typed-store-derive" }
+typed-store-derive.workspace = true
 typed-store-error.workspace = true
 typed-store-workspace-hack = { path = "../typed-store-workspace-hack" }
 
