--- a/external-crates/move/crates/move-bytecode-utils/Cargo.toml
+++ b/external-crates/move/crates/move-bytecode-utils/Cargo.toml
@@ -15,5 +15,5 @@ move-binary-format.workspace = true
 move-core-types.workspace = true
 petgraph.workspace = true
 serde.workspace = true
-serde-reflection = "0.4"
+serde-reflection.workspace = true
 serde_yaml.workspace = true
