refactor(sdk): Remove `zklogin`

--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -21,8 +21,7 @@
         "src",
         "transactions",
         "utils",
-        "verify",
-        "zklogin"
+        "verify"
     ],
     "engines": {
         "node": ">=20"
@@ -80,10 +79,6 @@
         "./verify": {
             "import": "./dist/esm/verify/index.js",
             "require": "./dist/cjs/verify/index.js"
-        },
-        "./zklogin": {
-            "import": "./dist/esm/zklogin/index.js",
-            "require": "./dist/cjs/zklogin/index.js"
         }
     },
     "scripts": {
