Try success without jobs

--- a/.github/workflows/_external_rust_lints.yml
+++ b/.github/workflows/_external_rust_lints.yml
@@ -49,7 +49,7 @@ jobs:
 
   clippy:
     if: |
-      !cancelled() && success('rustfmt', 'cargo-deny') && inputs.isRust
+      !cancelled() && success() && inputs.isRust
     needs:
       - rustfmt
       - cargo-deny
