--- a/.github/workflows/_rust_lints.yml
+++ b/.github/workflows/_rust_lints.yml
@@ -48,7 +48,7 @@ jobs:
 
   clippy:
     if: |
-      !cancelled() && success('rustfmt', 'cargo-deny') && inputs.isRust
+      !cancelled() && success() && inputs.isRust
     needs:
       - rustfmt
       - cargo-deny
