--- a/.github/workflows/hierarchy.yml
+++ b/.github/workflows/hierarchy.yml
@@ -128,8 +128,7 @@ jobs:
       - dprint-format
       - license-check
       - typos
-    if: |
-      !cancelled() && success()
+    if: ${{ !cancelled() && success() }}
     uses: ./.github/workflows/_rust.yml
     with:
       isRust: ${{ needs.diff.outputs.isRust == 'true' }}
