--- a/.github/workflows/hierarchy.yml
+++ b/.github/workflows/hierarchy.yml
@@ -54,8 +54,7 @@ jobs:
       group: license-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
       cancel-in-progress: true
     needs: diff
-    if: |
-      !cancelled() && needs.diff.outputs.isRust == 'true'
+    if: ${{ !cancelled() && needs.diff.outputs.isRust == 'true' }}
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -64,14 +63,12 @@ jobs:
 
   docusaurus:
     needs: diff
-    if: |
-      !cancelled() && needs.diff.outputs.isDoc == 'true' && !github.event.pull_request.draft
+    if: ${{ !cancelled() && needs.diff.outputs.isDoc == 'true' && github.event.pull_request.draft == false }}
     uses: ./.github/workflows/_docusaurus.yml
 
   docs-lint:
     needs: diff
-    if: |
-      !cancelled() && needs.diff.outputs.isDoc == 'true'
+    if: ${{ !cancelled() && needs.diff.outputs.isDoc == 'true' }}
     uses: ./.github/workflows/_docs_lint.yml
 
   release-notes-description-check:
@@ -80,8 +77,7 @@ jobs:
       group: release-notes-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
       cancel-in-progress: true
     needs: diff
-    if: |
-      !cancelled() && needs.diff.outputs.isReleaseNotesEligible == 'true'
+    if: ${{ !cancelled() && needs.diff.outputs.isReleaseNotesEligible == 'true' }}
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -119,7 +115,7 @@ jobs:
       success() &&
       needs.diff.outputs.isRust == 'false' &&
       needs.diff.outputs.isMove == 'true' &&
-      !github.event.pull_request.draft
+      github.event.pull_request.draft == false
     uses: ./.github/workflows/_move_tests.yml
 
   rust:
@@ -135,8 +131,7 @@ jobs:
     secrets: inherit
 
   e2e:
-    if: |
-      !github.event.pull_request.draft && success()
+    if: success() && github.event.pull_request.draft == false
     needs:
       - diff
       - dprint-format
