--- a/.github/workflows/_external_rust_tests.yml
+++ b/.github/workflows/_external_rust_tests.yml
@@ -32,8 +32,7 @@ jobs:
   test:
     name: Test external crates
     needs: changes
-    if: |
-      !cancelled() && inputs.isRust
+    if: (!cancelled() && inputs.isRust)
     env:
       # Tests written with #[sim_test] are often flaky if run as #[tokio::test] - this var
       # causes #[sim_test] to only run under the deterministic `simtest` job, and not the
@@ -74,8 +73,7 @@ jobs:
 
   check-unused-deps:
     name: Check Unused Dependencies (${{ matrix.flags }})
-    if: |
-      !cancelled() && inputs.isRust
+    if: (!cancelled() && inputs.isRust)
     strategy:
       matrix:
         flags: ["--all-features", "--no-default-features"]
