--- a/sdk/dapp-kit/package.json
+++ b/sdk/dapp-kit/package.json
@@ -75,7 +75,9 @@
         "vitest": "^0.33.0"
     },
     "dependencies": {
+        "@iota/apps-ui-kit": "workspace:*",
         "@iota/iota-sdk": "workspace:*",
+        "@iota/ui-icons": "workspace:*",
         "@iota/wallet-standard": "workspace:*",
         "@radix-ui/react-dialog": "^1.0.4",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -88,7 +90,8 @@
     },
     "peerDependencies": {
         "@tanstack/react-query": "^5.0.0",
-        "react": "*"
+        "react": "*",
+        "tailwindcss": "^3.3.3"
     },
     "sideEffects": [
         "*.css.ts",
