--- a/crates/iota-data-ingestion/Cargo.toml
+++ b/crates/iota-data-ingestion/Cargo.toml
@@ -9,9 +9,9 @@ publish = false
 [dependencies]
 anyhow.workspace = true
 async-trait.workspace = true
-aws-config.workspace = true
-aws-sdk-dynamodb = "1.39"
-aws-sdk-s3 = "1.42"
+aws-config= "1.5.6"
+aws-sdk-dynamodb = "1.42"
+aws-sdk-s3 = "1.50"
 backoff.workspace = true
 base64-url.workspace = true
 bcs.workspace = true
