--- a/sdk/dapp-kit/package.json
+++ b/sdk/dapp-kit/package.json
@@ -70,6 +70,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "size-limit": "^8.2.6",
+        "tailwindcss": "^3.3.3",
         "typescript": "^5.3.3",
         "vite": "^4.4.4",
         "vitest": "^0.33.0"
