--- a/apps/wallet-dashboard/package.json
+++ b/apps/wallet-dashboard/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@iota/core": "workspace:*",
         "@iota/dapp-kit": "workspace:*",
+        "@iota/apps-ui-kit": "workspace:*",
         "@iota/icons": "workspace:*",
         "@iota/iota-sdk": "workspace:*",
         "@tanstack/react-query": "^5.0.0",
