--- a/docs/examples/rust/Cargo.toml
+++ b/docs/examples/rust/Cargo.toml
@@ -21,6 +21,7 @@ serde_json.workspace = true
 tokio.workspace = true
 
 move-core-types.workspace = true
+move-binary-format = { workspace = true, features = ["fuzzing"] }
 
 [[example]]
 name = "address-unlock-condition"
