Fix some cargos

--- a/crates/test-cluster/Cargo.toml
+++ b/crates/test-cluster/Cargo.toml
@@ -25,6 +25,7 @@ iota-config.workspace = true
 iota-core = { workspace = true, features = ["test-utils"] }
 iota-framework.workspace = true
 iota-json-rpc.workspace = true
+iota-json-rpc-api.workspace = true
 iota-json-rpc-types.workspace = true
 iota-keys.workspace = true
 iota-node.workspace = true
