--- a/crates/iota-tool/Cargo.toml
+++ b/crates/iota-tool/Cargo.toml
@@ -25,6 +25,7 @@ ron.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 strum.workspace = true
+strum_macros.workspace = true
 tempfile.workspace = true
 tracing.workspace = true
 
