--- a/sdk/build-scripts/package.json
+++ b/sdk/build-scripts/package.json
@@ -27,8 +27,10 @@
         "autoprefixer": "^10.4.14",
         "dotenv": "^16.4.5",
         "esbuild": "^0.17.6",
+        "esbuild-style-plugin": "^1.6.3",
         "postcss": "^8.4.31",
         "postcss-prefix-selector": "^1.16.0",
+        "tailwindcss": "^3.3.3",
         "typescript": "^5.3.3"
     },
     "dependencies": {
