--- a/.typos.toml
+++ b/.typos.toml
@@ -5,6 +5,7 @@ extend-ignore-re = ["[a-zA-Z0-9]{44}", "[a-zA-Z0-9]{9}"]
 # accepted plurals
 froms = "froms"
 alls = "alls"
+somes = "somes"
 # ordinal numbers (2nd, ...)
 nd = "nd"
 # random identifiers, variables, functions, ...
@@ -30,3 +31,4 @@ AAS = "AAS"
 # actual typos purposedly used in tests
 assing = "assing"
 tring = "tring"
+Thi = "Thi"
