--- a/turbo.json
+++ b/turbo.json
@@ -1,40 +1,60 @@
 {
-	"$schema": "https://turbo.build/schema.json",
-	"pipeline": {
-		"lint": {
-			"dependsOn": ["^build"]
-		},
-		"prettier:fix": {
-			"cache": false
-		},
-		"test": {
-			"dependsOn": ["^build", "build"],
-			"outputs": ["coverage/**"]
-		},
-		"dev": {
-			"dependsOn": ["^build"],
-			"cache": false,
-			"persistent": true
-		},
-		"build": {
-			"dependsOn": ["^build"],
-			"outputs": [
-				"build/**",
-				"dist/**",
-				"storybook-static/**",
-				".next/**",
-				"!.next/cache/**",
-				"pkg/**"
-			]
-		}
-	},
-	"globalEnv": [
-		"VERCEL_ENV",
-		"VITE_VERCEL_ANALYTICS_ID",
-		"VITE_SENTRY_SAMPLE_RATE",
-		"DEFAULT_NETWORK",
-		"IOTA_NETWORKS"
-	],
-	"globalDotEnv": ["sdk/.env", "sdk/.env.defaults"],
-	"globalDependencies": [".eslintrc.js", "prettier.config.js", ".prettierignore"]
+  "$schema": "https://turbo.build/schema.json",
+  "globalEnv": [
+    "VERCEL_ENV",
+    "VITE_VERCEL_ANALYTICS_ID",
+    "VITE_SENTRY_SAMPLE_RATE",
+    "DEFAULT_NETWORK",
+    "IOTA_NETWORKS"
+  ],
+  "globalDependencies": [
+    ".eslintrc.js",
+    "prettier.config.js",
+    ".prettierignore",
+    "sdk/.env",
+    "sdk/.env.defaults"
+  ],
+  "tasks": {
+    "lint": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**",
+        "build/**"
+      ]
+    },
+    "prettier:fix": {
+      "cache": false
+    },
+    "test": {
+      "dependsOn": [
+        "^build",
+        "build"
+      ],
+      "outputs": [
+        "coverage/**"
+      ]
+    },
+    "dev": {
+      "dependsOn": [
+        "^build"
+      ],
+      "cache": false,
+      "persistent": true
+    },
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "build/**",
+        "dist/**",
+        "storybook-static/**",
+        ".next/**",
+        "!.next/cache/**",
+        "pkg/**"
+      ]
+    }
+  }
 }
