feat(tooling-sdk): add lint:fix to turbo

--- a/turbo.json
+++ b/turbo.json
@@ -24,6 +24,15 @@
         "build/**"
       ]
     },
+    "lint:fix": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**",
+        "build/**"
+      ]
+    },
     "prettier:fix": {
       "cache": false
     },
