--- a/sdk/create-dapp/templates/react-e2e-counter/move/counter/Move.toml
+++ b/sdk/create-dapp/templates/react-e2e-counter/move/counter/Move.toml
@@ -3,7 +3,7 @@ name = "counter"
 version = "0.0.1"
 
 [dependencies]
-Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "framework/devnet" }
+Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "develop" }
 
 [addresses]
 counter = "0x0"
