--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -1,5 +1,6 @@
 {
     "name": "iota-wallet",
+    "version": "0.0.1",
     "private": true,
     "description": "A wallet for IOTA",
     "main": "./dist/ui.js",
