--- a/crates/iota-indexer/Cargo.toml
+++ b/crates/iota-indexer/Cargo.toml
@@ -48,28 +48,21 @@ move-core-types.workspace = true
 cached.workspace = true
 diesel_migrations = "2.2"
 
-iota-config = { workspace = true, optional = true }
-serde_json = { workspace = true, optional = true }
-simulacrum = { workspace = true, optional = true }
-test-cluster = { workspace = true, optional = true }
-
-serial_test = { version = "2.0", optional = true }
-
 [features]
-pg_integration = [
-  "test-cluster",
-  "serde_json",
-  "simulacrum",
-  "iota-config",
-  "serial_test",
-]
+pg_integration = []
 
 [dev-dependencies]
+iota-config.workspace = true
 iota-genesis-builder.workspace = true
 iota-keys.workspace = true
 iota-move-build.workspace = true
 iota-swarm-config.workspace = true
 rand.workspace = true
+serde_json.workspace = true
+simulacrum.workspace = true
+test-cluster.workspace = true
+
+serial_test = "2.0"
 
 [[bin]]
 name = "iota-indexer"
