Apply dprint fmt

--- a/crates/iota-metric-checker/Cargo.toml
+++ b/crates/iota-metric-checker/Cargo.toml
@@ -14,9 +14,7 @@ chrono.workspace = true
 clap.workspace = true
 humantime.workspace = true
 once_cell.workspace = true
-prometheus-http-query = { version = "0.8", default-features = false, features = [
-    "rustls-tls",
-] }
+prometheus-http-query = { version = "0.8", default-features = false, features = ["rustls-tls"] }
 reqwest.workspace = true
 serde.workspace = true
 serde_yaml = "0.9"
