--- a/crates/iota-graphql-rpc/Cargo.toml
+++ b/crates/iota-graphql-rpc/Cargo.toml
@@ -8,7 +8,12 @@ publish = false
 
 [dependencies]
 anyhow.workspace = true
-async-graphql = { workspace = true, features = ["dataloader", "apollo_tracing", "tracing", "opentelemetry"] }
+async-graphql = { workspace = true, features = [
+    "dataloader",
+    "apollo_tracing",
+    "tracing",
+    "opentelemetry",
+] }
 async-graphql-axum.workspace = true
 async-graphql-value.workspace = true
 async-trait.workspace = true
@@ -35,7 +40,6 @@ iota-sdk.workspace = true
 iota-types.workspace = true
 itertools.workspace = true
 lru.workspace = true
-markdown-gen = "1.2"
 move-binary-format.workspace = true
 move-core-types.workspace = true
 move-disassembler.workspace = true
