--- a/crates/iota-indexer-builder/Cargo.toml
+++ b/crates/iota-indexer-builder/Cargo.toml
@@ -13,6 +13,8 @@ iota-data-ingestion-core.workspace = true
 iota-metrics.workspace = true
 iota-types.workspace = true
 prometheus.workspace = true
-telemetry-subscribers.workspace = true
 tokio = { workspace = true, features = ["full"] }
 tracing.workspace = true
+
+[dev-dependencies]
+telemetry-subscribers.workspace = true
