--- a/crates/iota-types/Cargo.toml
+++ b/crates/iota-types/Cargo.toml
@@ -24,11 +24,7 @@ eyre.workspace = true
 hex.workspace = true
 im.workspace = true
 indexmap.workspace = true
-iota-stardust-sdk = { version = "1.1", default-features = false, features = [
-  "irc_27",
-  "irc_30",
-  "std",
-], package = "iota-sdk" }
+iota-stardust-sdk = { version = "1.1", default-features = false, features = ["irc_27", "irc_30", "std"], package = "iota-sdk" }
 itertools.workspace = true
 move-binary-format.workspace = true
 move-bytecode-utils.workspace = true
