--- a/crates/iota-move/Cargo.toml
+++ b/crates/iota-move/Cargo.toml
@@ -28,8 +28,7 @@ move-package.workspace = true
 move-unit-test.workspace = true
 telemetry-subscribers.workspace = true
 tokio = { workspace = true, features = ["full"] }
-
-iota-move-natives = { path = "../../iota-execution/latest/iota-move-natives", package = "iota-move-natives-latest" }
+iota-move-natives = { path = "../../iota-execution/latest/iota-move-natives", package = "iota-move-natives-latest", optional = true }
 move-vm-runtime = { path = "../../external-crates/move/crates/move-vm-runtime" }
 
 better_any = "0.1.1"
@@ -50,6 +49,7 @@ move-package.workspace = true
 iota-macros.workspace = true
 iota-metrics.workspace = true
 
+
 [package.metadata.cargo-udeps.ignore]
 normal = ["jemalloc-ctl"]
 
@@ -59,6 +59,6 @@ build = []
 coverage = []
 disassemble = []
 prove = []
-unit_test = ["build", "dep:once_cell"]
+unit_test = ["build", "dep:once_cell", "dep:iota-move-natives"]
 calibrate = []
 all = ["build", "coverage", "disassemble", "prove", "unit_test", "calibrate"]
