--- a/turbo.json
+++ b/turbo.json
@@ -1,4 +1,5 @@
 {
+  "ui": "tui",
   "$schema": "https://turbo.build/schema.json",
   "globalEnv": [
     "VERCEL_ENV",
@@ -64,6 +65,20 @@
         "!.next/cache/**",
         "pkg/**"
       ]
+    },
+    "build:rc": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "build/**",
+        "dist/**",
+        "storybook-static/**",
+        ".next/**",
+        "!.next/cache/**",
+        "pkg/**"
+      ]
     }
+
   }
 }
