refactor: Nicer artifact name

--- a/.github/workflows/apps-wallet-rc.build.yml
+++ b/.github/workflows/apps-wallet-rc.build.yml
@@ -21,11 +21,6 @@ jobs:
       contents: read
     runs-on: [self-hosted]
     steps:
-      - name: Create artifact name
-        shell: bash
-        run: |
-          export artifact_name="wallet-rc-${{ env.RC_VERSION }}"
-          echo "artifact_name=${artifact_name}" >> $GITHUB_ENV
       - name: Checking out ${{ env.iota_branch }}
         uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # pin@v3
       - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # pin@v4.0.0
@@ -36,6 +31,16 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+      - name: get-npm-version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@v1.3.1
+        with:
+          path: apps/wallet
+      - name: Create artifact name
+        shell: bash
+        run: |
+          export artifact_name="iota-wallet-${{ steps.package-version.outputs.current-version }}-rc.${{ env.RC_VERSION }}"
+          echo "artifact_name=${artifact_name}" >> $GITHUB_ENV
       - name: Build Wallet
         run: pnpm wallet build:rc
       - name: Upload artifacts
