--- a/external-crates/move/crates/move-core-types/Cargo.toml
+++ b/external-crates/move/crates/move-core-types/Cargo.toml
@@ -13,6 +13,7 @@ description = "Core types for Move"
 anyhow.workspace = true
 arbitrary = { workspace = true, optional = true }
 bcs.workspace = true
+enum-compat-util.workspace = true
 ethnum.workspace = true
 hex.workspace = true
 leb128.workspace = true
@@ -39,3 +40,6 @@ serde_json.workspace = true
 [features]
 default = []
 fuzzing = ["proptest", "proptest-derive", "arbitrary"]
+
+[package.metadata.cargo-udeps.ignore]
+development = ["enum-compat-util"]
