--- a/external-crates/move/crates/move-binary-format/Cargo.toml
+++ b/external-crates/move/crates/move-binary-format/Cargo.toml
@@ -40,4 +40,4 @@ fuzzing = [
 wasm = ["getrandom"]
 
 [package.metadata.cargo-udeps.ignore]
-development = ["enum-compat-util"]
+normal = ["enum-compat-util"]
