--- a/external-crates/move/crates/move-core-types/Cargo.toml
+++ b/external-crates/move/crates/move-core-types/Cargo.toml
@@ -42,4 +42,4 @@ default = []
 fuzzing = ["proptest", "proptest-derive", "arbitrary"]
 
 [package.metadata.cargo-udeps.ignore]
-development = ["enum-compat-util"]
+normal = ["enum-compat-util"]
