--- a/external-crates/move/crates/move-vm-runtime/Cargo.toml
+++ b/external-crates/move/crates/move-vm-runtime/Cargo.toml
@@ -32,6 +32,8 @@ anyhow.workspace = true
 hex.workspace = true
 proptest.workspace = true
 
+move-binary-format = { workspace = true, features = ["fuzzing"] }
+
 [features]
 default = []
 fuzzing = ["move-vm-types/fuzzing"]
