fix(tooling-wallet-tests): Re-enable wallet e2e tests in CI

--- a/.github/workflows/_e2e.yml
+++ b/.github/workflows/_e2e.yml
@@ -74,3 +74,21 @@ jobs:
       - name: Build explorer
         if: inputs.isTypescriptSDK || inputs.isExplorer || inputs.isRust
         run: pnpm turbo --filter=iota-explorer build
+
+      - name: Run Local net
+        run: cargo run --bin iota-test-validator -- --epoch-duration-ms 10000 &
+
+      - name: Build Wallet
+        if: inputs.isWallet || inputs.isRust || inputs.isTypescriptSDK
+        run: pnpm wallet build
+
+      - name: Run Wallet e2e tests
+        if: inputs.isWallet || inputs.isRust || inputs.isTypescriptSDK
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm --filter iota-wallet playwright test
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report-wallet
+          path: apps/wallet/playwright-report/
+          retention-days: 30
