Cleanup Cargo.toml and downgrade dependency that broke iota-start

--- a/crates/iota-network-stack/Cargo.toml
+++ b/crates/iota-network-stack/Cargo.toml
@@ -14,7 +14,7 @@ bytes.workspace = true
 eyre.workspace = true
 futures.workspace = true
 http.workspace = true
-multiaddr = "0.18"
+multiaddr.workspace = true
 pin-project-lite = "0.2.13"
 serde.workspace = true
 snap.workspace = true
