--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -20,8 +20,7 @@
 		"@iota/create-dapp",
 		"sponsored-transactions",
 		"kiosk-demo",
-		"kiosk-cli",
-		"@iota/zklogin"
+		"kiosk-cli"
 	],
 	"___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
 		"onlyUpdatePeerDependentsWhenOutOfRange": true
