fix: Remove zhlogin from changeset config

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -19,8 +19,7 @@
 		"@iota/apps-ui-kit",
 		"sponsored-transactions",
 		"kiosk-demo",
-		"kiosk-cli",
-		"@iota/zklogin"
+		"kiosk-cli"
 	],
 	"___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
 		"onlyUpdatePeerDependentsWhenOutOfRange": true
