remove CI check

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,5 @@
 [alias]
 ci-fmt = "fmt --check"
-ci-fmt-external = "ci-fmt --manifest-path external-crates/move/Cargo.toml --all"
 ci-clippy = "clippy --all-targets --all-features -- -D warnings"
 ci-clippy-external = [
   "clippy",
@@ -23,10 +22,7 @@ rustflags = ["-C", "force-frame-pointers=yes", "-C", "force-unwind-tables=yes"]
 
 # 64 bit MSVC, override default 1M stack with 8M stack
 [target.x86_64-pc-windows-msvc]
-rustflags = [
-  "-C",
-  "link-arg=/STACK:8000000",
-]
+rustflags = ["-C", "link-arg=/STACK:8000000"]
 
 [target.x86_64-pc-windows-msvc.pq]
 rustc-link-search = ["C:\\Program Files\\PostgreSQL\\16\\lib"]
