--- a/.github/workflows/apps-wallet-rc.build.yml
+++ b/.github/workflows/apps-wallet-rc.build.yml
@@ -12,7 +12,7 @@ env:
   DEFAULT_NETWORK: ${{ secrets.WALLET_RC_DEFAULT_NETWORK }}
   IOTA_NETWORKS: ${{ secrets.WALLET_RC_IOTA_NETWORKS }}
   APPS_BACKEND: ${{ secrets.WALLET_RC_APPS_BACKEND }}
-  RC_VERSION: "${{ github.event.inputs.rc_version }}"
+  RC_VERSION: ${{ github.event.inputs.rc_version }}
   WALLET_RC: "true"
 
 jobs:
