--- a/.github/workflows/apps-wallet-rc.build.yml
+++ b/.github/workflows/apps-wallet-rc.build.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build Wallet
         run: pnpm wallet build:rc
         env:
-          RC_VERSION: ${{ env.RC_VERSION }}
+          WALLET_RC_VERSION: ${{ env.RC_VERSION }}
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
