fix(wallet): test

--- a/.github/workflows/apps-wallet-rc.build.yml
+++ b/.github/workflows/apps-wallet-rc.build.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           export artifact_name="iota-wallet-${{ steps.package-version.outputs.current-version }}-rc.${{ env.RC_VERSION }}"
           echo "artifact_name=${artifact_name}" >> $GITHUB_ENV
+          echo "RC_VERSION=${{ env.RC_VERSION }}" >> $GITHUB_ENV
       - name: Build Wallet
         run: RC_VERSION=${{ env.RC_VERSION }} pnpm wallet build:rc
         env: 
