chore(*): fix new typos

--- a/.typos.toml
+++ b/.typos.toml
@@ -9,6 +9,7 @@ somes = "somes"
 # ordinal numbers (2nd, ...)
 nd = "nd"
 # random identifiers, variables, functions, ...
+bttr = "bttr"
 dbe = "dbe"
 thr = "thr"
 fo = "fo"
