fix: wallet rc version not being picked by the CI

--- a/turbo.json
+++ b/turbo.json
@@ -36,7 +36,8 @@
 		"VITE_VERCEL_ANALYTICS_ID",
 		"VITE_SENTRY_SAMPLE_RATE",
 		"DEFAULT_NETWORK",
-		"IOTA_NETWORKS"
+		"IOTA_NETWORKS",
+		"RC_VERSION"
 	],
 	"globalDependencies": [
 		".eslintrc.js",
